[package]
name = "viewbuilder"
version = "0.10.0-alpha.5"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Cross-platform UI framework"
repository = "https://github.com/matthunz/viewbuilder"

[features]
native = []
web = []
full = []

[dependencies]
kurbo = "0.10.4"
web-sys = { version = "0.3.66", features = ["Element"] }

[package.metadata.docs.rs]
features = ["full"]
rustdoc-args = ["--cfg", "docsrs"]

