[package]
name = "viewbuilder"
version = "0.10.0-alpha.4"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Cross-platform UI framework"
repository = "https://github.com/matthunz/viewbuilder"

[features]
full = []

[dependencies]
pollster = "0.3.0"
slotmap = "1.0.7"
vello = { git = "https://github.com/linebender/vello" }
winit = { version = "0.29.10", features = ["rwh_05"] }

[package.metadata.docs.rs]
features = ["full"]
rustdoc-args = ["--cfg", "docsrs"]

