[package]
name = "viewbuilder-macros"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Macros for viewbuilder"
repository = "https://github.com/matthunz/viewbuilder"


[lib]
proc-macro = true

[dependencies]
quote = "1.0.33"
syn = { version = "2.0.41", features = ["full"] }
